--- a/GpsFriends Too/GpsFriends Too/GpsFriends Too.csproj
+++ b/GpsFriends Too/GpsFriends Too/GpsFriends Too.csproj
@@ -5,4 +5,12 @@
     <RootNamespace>GpsFriends_Too</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="AjaxModtager.aspx.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="AjaxModtager.aspx.cs" />
+  </ItemGroup>
+
 </Project>
